--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "devDependencies": {
     "browserify": "^8.1.3",
+    "connect": "^3.3.4",
     "gulp": "^3.8.10",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "pretty-hrtime": "^1.0.0",
+    "serve-static": "^1.8.1",
     "through2": "^0.6.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
