--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "browserify": "^8.1.3",
     "connect": "^3.3.4",
+    "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
